# distributed-aviation-system

./: .gitignore  LICENSE  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  router.yml  supergraph.graphql  supergraph.yml
.github/workflows/: build_images.yml  smoke_test.yml  verify_supergraph.yml
k8s/: 00-namespace.yml  01-ingress-controller.yml  02-cross-namespace-services.yml  02-ingress.yml  03-ingress.yml  README.md  cross-namespace-services-aviation.yml
k8s/aircraft/: README.md  cache.yml  database.yml  migrations.yml  secrets.yml  service.yml
k8s/authentication/: database.yml  keygen.yml  migrations.yml  secrets.yml  service.yml
k8s/flights/: README.md  cache.yml  database.yml  migrations.yml  secrets.yml  service.yml
k8s/gateway/: service.yml
k8s/messaging/: kafka.yml  schema-loader.yml  schema-registry.yml
k8s/monitoring/: grafana.yml  jaeger.yml  loki.yml  (+3 more)
kafka/: docker-compose.yml  script.sh
load-tests/: README.md  codegen.ts  esbuild.config.js  eslint.config.js  package-lock.json  package.json  tsconfig.json
monitoring/: README.md  docker-compose.yml
router/plugins/authentication/: .env.example  Cargo.toml
router/plugins/authentication/src/: main.rs
services/gateway/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
services/gateway/src/: main.rs  observability.rs
services/gateway/src/config/: config.rs
services/gateway/src/handling/: health_handler.rs  mod.rs  route_handler.rs
services/gateway/src/requests/: forward.rs  mod.rs
services/gateway/src/verify/: jwks_cache.rs  local.rs  mod.rs  models.rs
(+318 files in other folders)
