[package]
name = "authentication"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
anyhow = "1.0.100"
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }